--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to the Space Cowgirl's World</h1>
+        <h1>Welcome to Julianna's Space Cowgirl's World</h1>
         <p>Hello, I'm Julianna, the Architecture Student Space Cowgirl!</p>
         <p>This is my personal corner of the galaxy. Stay tuned for adventures and updates on my architectural portfolio and education.</p>
         <div class="image-container">
